--- a/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +197,14 @@
        "4       3.39       17850  United Kingdom         20.34  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# enter your code here\n",
-    "orders = pd.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.csv\")\n",
+    "orders = pd.read_csv(\"../../lab-subsetting-and-descriptive-stats/your-code/Orders.zip\")\n",
     "orders.head()"
    ]
   },
@@ -238,11 +238,464 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>61619</td>\n",
+       "      <td>541431</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74215</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>42441700</td>\n",
+       "      <td>101296926</td>\n",
+       "      <td>365971</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>441</td>\n",
+       "      <td>2219</td>\n",
+       "      <td>2458</td>\n",
+       "      <td>481.21</td>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>2807120</td>\n",
+       "      <td>16869685</td>\n",
+       "      <td>62324</td>\n",
+       "      <td>257</td>\n",
+       "      <td>111</td>\n",
+       "      <td>472</td>\n",
+       "      <td>2341</td>\n",
+       "      <td>178.71</td>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>35444274</td>\n",
+       "      <td>42165457</td>\n",
+       "      <td>146803</td>\n",
+       "      <td>803</td>\n",
+       "      <td>73</td>\n",
+       "      <td>657</td>\n",
+       "      <td>631</td>\n",
+       "      <td>605.10</td>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12350</th>\n",
+       "      <td>1365627</td>\n",
+       "      <td>9231629</td>\n",
+       "      <td>34187</td>\n",
+       "      <td>34</td>\n",
+       "      <td>51</td>\n",
+       "      <td>272</td>\n",
+       "      <td>197</td>\n",
+       "      <td>65.30</td>\n",
+       "      <td>334.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Unnamed: 0  InvoiceNo    year  month  day  hour  Quantity  \\\n",
+       "CustomerID                                                              \n",
+       "12346            61619     541431    2011      1    2    10     74215   \n",
+       "12347         42441700  101296926  365971   1383  441  2219      2458   \n",
+       "12348          2807120   16869685   62324    257  111   472      2341   \n",
+       "12349         35444274   42165457  146803    803   73   657       631   \n",
+       "12350          1365627    9231629   34187     34   51   272       197   \n",
+       "\n",
+       "            UnitPrice  amount_spent  \n",
+       "CustomerID                           \n",
+       "12346            1.04      77183.60  \n",
+       "12347          481.21       4310.00  \n",
+       "12348          178.71       1797.24  \n",
+       "12349          605.10       1757.55  \n",
+       "12350           65.30        334.40  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "#Sub Problem 1: How to aggregate the  amount_spent for unique customers?\n",
+    "#Made a group by and sum amount spent\n",
+    "orders_gp = orders.groupby(['CustomerID']).sum()\n",
+    "orders_gp.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>61619</td>\n",
+       "      <td>541431</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74215</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>42441700</td>\n",
+       "      <td>101296926</td>\n",
+       "      <td>365971</td>\n",
+       "      <td>1383</td>\n",
+       "      <td>441</td>\n",
+       "      <td>2219</td>\n",
+       "      <td>2458</td>\n",
+       "      <td>481.21</td>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>2807120</td>\n",
+       "      <td>16869685</td>\n",
+       "      <td>62324</td>\n",
+       "      <td>257</td>\n",
+       "      <td>111</td>\n",
+       "      <td>472</td>\n",
+       "      <td>2341</td>\n",
+       "      <td>178.71</td>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>35444274</td>\n",
+       "      <td>42165457</td>\n",
+       "      <td>146803</td>\n",
+       "      <td>803</td>\n",
+       "      <td>73</td>\n",
+       "      <td>657</td>\n",
+       "      <td>631</td>\n",
+       "      <td>605.10</td>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12350</th>\n",
+       "      <td>1365627</td>\n",
+       "      <td>9231629</td>\n",
+       "      <td>34187</td>\n",
+       "      <td>34</td>\n",
+       "      <td>51</td>\n",
+       "      <td>272</td>\n",
+       "      <td>197</td>\n",
+       "      <td>65.30</td>\n",
+       "      <td>334.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Unnamed: 0  InvoiceNo    year  month  day  hour  Quantity  \\\n",
+       "CustomerID                                                              \n",
+       "12346            61619     541431    2011      1    2    10     74215   \n",
+       "12347         42441700  101296926  365971   1383  441  2219      2458   \n",
+       "12348          2807120   16869685   62324    257  111   472      2341   \n",
+       "12349         35444274   42165457  146803    803   73   657       631   \n",
+       "12350          1365627    9231629   34187     34   51   272       197   \n",
+       "\n",
+       "            UnitPrice  amount_spent  \n",
+       "CustomerID                           \n",
+       "12346            1.04      77183.60  \n",
+       "12347          481.21       4310.00  \n",
+       "12348          178.71       1797.24  \n",
+       "12349          605.10       1757.55  \n",
+       "12350           65.30        334.40  "
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Aggregate the amount spent for all unique customers\n",
+    "sum_by_customer = orders.groupby([\"CustomerID\"]).sum().copy()\n",
+    "sum_by_customer.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>total_amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>5391.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>5391.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>5391.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>5391.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>5391.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  total_amount  \n",
+       "0       2.55       17850  United Kingdom         15.30       5391.21  \n",
+       "1       3.39       17850  United Kingdom         20.34       5391.21  \n",
+       "2       2.75       17850  United Kingdom         22.00       5391.21  \n",
+       "3       3.39       17850  United Kingdom         20.34       5391.21  \n",
+       "4       3.39       17850  United Kingdom         20.34       5391.21  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_amounts = pd.Series(sum_by_customer.amount_spent.values,sum_by_customer.index).to_dict()\n",
+    "total_amounts\n",
+    "\n",
+    "orders[\"total_amount\"] = orders[\"CustomerID\"].map(total_amounts)\n",
+    "orders.head()\n",
+    "\n"
    ]
   },
   {
